fixed z-index issue; volunteer page redesgin with content;

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -127,7 +127,7 @@ header {
   justify-content: space-between;
   align-items: center;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 110; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -149,6 +149,7 @@ header {
     }
   &__content{
      background-color: var(--themeWhiteColor);
+     z-index: 111;
      margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
      border: 0.3em solid #888;
      width: 50%; /* Could be more or less, depending on screen size */
@@ -222,7 +223,7 @@ header {
       background-color: var(--themeGreenColor);
       color: white;
       cursor:pointer;
-      z-index:90;
+      /*z-index:90;*/
     }
   & label:hover {
       background:var(--themeDarkBlueColor);
@@ -238,8 +239,8 @@ header {
     }
 
   & input[type="radio"] {
-      opacity:0.011;
-      z-index:100;
+      opacity:0.011;/*
+      z-index:100;*/
     }
 
   & input[type="radio"]:checked + label {
