--- a/app/stylesheets/volunteer_page.css
+++ b/app/stylesheets/volunteer_page.css
@@ -112,13 +112,6 @@ header {
     flex-direction: row;
     justify-content: center;
 
-
-& h2 {
-      font-family: var(--titleFont);
-      font-size: 3.125em; /*50px/16px*/
-      margin: 0;
-      font-weight: 400;
-  }
 & .bold{
       font-family: var(--paragraphFont);
       font-size: 1.5em;
@@ -129,10 +122,10 @@ header {
       font-family: var(--paragraphFont);
       font-size: 1.5em;
       margin: 0;
-      font-weight: 400;
+      font-weight: 550;
   }
 &__paradiv {
-     width: 50%;
+     width: 75%;
      padding: 1em 1.5em 0;
      display: flex;
      flex-direction: column;
@@ -140,23 +133,40 @@ header {
 &__para {
      display: flex;
      flex-direction: row;
-     align-items: center;
+     /*align-items: center;*/
      padding-bottom: 1.5em;
 &__desc{
-     text-align: right;
+     text-align: left;
      padding-right: 1.75em;
+     width: 50%;
  }
+ &__qual{
+      text-align: left;
+      padding-right: 1.75em;
+      width: 50%;
+
+&__li{
+      font-family: var(--paragraphFont);
+      font-size: 1.5em;
+      margin: 0;
+      font-weight: 400;
+  }
+}
 }
 
 }
 &__imgdiv{
-     width: 50%;
+     width: 25%;
      display: flex;
-     justify-content: center;
-     padding: 1em;
-&__img{
-     width: 80%;
- }
+     /*justify-content: center;*/
+    /*align-items: center;*/
+     padding: 1em 0;
+& h2 {
+      font-family: var(--titleFont);
+      font-size: 2.5em; /*50px/16px*/
+      margin: 0;
+      font-weight: 400;
+  }
 }
 }
 
@@ -167,7 +177,7 @@ header {
     justify-content: space-between;
     align-items: center;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 110; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -189,6 +199,7 @@ header {
   }
 &__content{
      background-color: var(--themeWhiteColor);
+     z-index: 111;
      margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
      border: 0.3em solid #888;
      width: 50%; /* Could be more or less, depending on screen size */
@@ -262,7 +273,7 @@ header {
       background-color: var(--themeGreenColor);
       color: white;
       cursor:pointer;
-      z-index:90;
+      /*z-index:90;*/
   }
 & label:hover {
       background:var(--themeDarkBlueColor);
@@ -278,8 +289,8 @@ header {
   }
 
 & input[type="radio"] {
-      opacity:0.011;
-      z-index:100;
+      opacity:0.011;/*
+      z-index:100;*/
   }
 
 & input[type="radio"]:checked + label {
